edit modal has been added

--- a/src/components/product-list/ProductList.scss
+++ b/src/components/product-list/ProductList.scss
@@ -1,8 +1,8 @@
 .productsTable{
     border-collapse: collapse;
-    width: 100%;
+    margin-left: 10%;
     .productName{
-        // width: 40%;
+        width: 40%;
     }
 }
 tbody{
