--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -1,30 +1,42 @@
-.header{
+.header {
     background-color: #145214;
     height: 44px;
-    .headerMenu{
+
+    .headerMenu {
         display: flex;
-        justify-content: space-around;
         color: white;
-        ul{
+
+        ul {
             display: flex;
             list-style: none;
+
             li {
                 margin-right: 40px;
                 margin-top: 7px;
             }
+
             li:first-child {
                 font-size: 20px;
                 font-weight: bold;
                 margin-top: 2px;
-              }
+            }
         }
-        .lheader{
+
+        .rheader {
+            margin-left: 8%;
+        }
+
+        .lheader {
             display: flex;
-            img{
+            position: absolute;
+            right: 75px;
+
+            img {
                 width: 44px;
                 height: 44px;
             }
-            p{
+
+            p {
                 margin-top: 5px;
                 margin-left: 9px;
             }
